# GrayZoneBench

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  GRAYZONEBENCH_UI_REVAMP_PLAN.md  LICENSE  NOTICE  OPENAI_BEDROCK_MODELS.md  README.md  VERCEL_DEPLOYMENT.md  gray-zone-bench.py  pyproject.toml  run_safe_completion_llmjudge_hf.py  run_safe_completion_llmjudge_hf_v2.py  run_safe_completion_llmjudge_v0.py  test_multi_vendor.py  test_openai_bedrock.py  vercel.json
dataset/: notebook.ipynb
dataset/grayzone_csv/: contextual.csv  contextual.cybercrime_intrusion.csv  standard.csv  standard.cybercrime_intrusion.csv
docs/: configuration.md  examples.md  how-it-works.md  research-background.md  understanding-results.md
sample-data/: gpt-4.1-nano.json  gpt-5-nano.json  metadata.json
site/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
site/app/: globals.css  layout.tsx  page.tsx
site/hooks/: use-intersection-observer.ts  use-mobile.ts  use-simple-popup.ts  use-theme.ts
site/lib/: cached-data.ts  fetch-results.ts  fetch-utils.ts  gcs-client.ts  utils.ts
site/libs/: comprehensive-data-transforms.ts  data-transforms.ts
site/scripts/: validate-deployment.js
site/types/: comprehensive-evaluation.ts  (+1 more)
utils/: __init__.py  agentic_evaluator.py  cli_display.py  data_processing.py  deterministic_analyzer.py  display.py  file_utils.py  gcs_uploader.py  judge.py  llm_client.py  model_providers.py  openai_client.py  openai_moderation.py  professional_display.py  scoring_rubrics.py
(+39 files in other folders)
